Created first tables and added db properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,18 @@
 server.servlet.context-path=/online-book-rental
 
+#H2 related configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+#enable h2 console default h2-console url for this app is http://localhost:8080/online-book-rental/h2-console
+spring.h2.console.enabled=true
+
+spring.jpa.show-sql=true
+
+#If you want to persist the data on file 
+#spring.datasource.url=jdbc:h2:file:/data/sampledata  
+#spring.datasource.url=jdbc:h2:D:/Workspaces/Database/online-book-rental-db
+
