--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 
 #If you want to persist the data on file 
 #spring.datasource.url=jdbc:h2:file:/data/sampledata  
